--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.96MB/s(Youtube:不良林), server: 154.17.25.101, port: 63163, type: ss, cipher: aes-256-gcm, password: !<str> 49231199}
-  - {name: 🇫🇷 法国-937.5KB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇯🇵 日本-1.31MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇳 中国-223.8KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇫🇷 法国-917.8KB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇰🇷 韩国-408.2KB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇳 中国-763.8KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.85MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.02MB/s(Youtube:不良林), server: 134.195.198.95, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇩🇪 德国-1.63MB/s(Youtube:不良林), server: 193.108.118.34, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-392.5KB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65017, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-307.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.45MB/s(Youtube:不良林), server: 134.195.198.95, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-1.04MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-718.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1006.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.09MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-843.2KB/s(Youtube:不良林), server: 193.108.118.30, port: 9090, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-937.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-917.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-408.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-718.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1006.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇩🇪 德国-843.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-937.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-917.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-408.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-718.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1006.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇩🇪 德国-843.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-937.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-917.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-408.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-718.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1006.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇩🇪 德国-843.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-937.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-917.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-408.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-718.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1006.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇩🇪 德国-843.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-937.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-917.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-408.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-718.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1006.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇩🇪 德国-843.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-937.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-917.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-408.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-718.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1006.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇩🇪 德国-843.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-937.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-917.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-408.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-718.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1006.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇩🇪 德国-843.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
