--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-524.3KB/s(Youtube:不良林), server: 134.195.198.95, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-561.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇬🇧 英国-960.3KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-763.8KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-582.2KB/s(Youtube:不良林), server: 38.143.66.20, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-1012.5KB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇨🇦 加拿大-1.43MB/s(Youtube:不良林), server: 134.195.198.95, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇨🇳 中国-1.04MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-718.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1006.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.09MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-843.2KB/s(Youtube:不良林), server: 193.108.118.30, port: 9090, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-547.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-854.0KB/s(Youtube:不良林), server: 134.195.198.95, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇸🇬 新加坡-349.9KB/s(Youtube:不良林), server: 43.134.229.238, port: 20085, type: vmess, uuid: eb35ce5a-7b4d-4fbc-d23f-a57c74872634, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-356.1KB/s(Youtube:不良林), server: 43.134.229.238, port: 57557, type: vmess, uuid: 7d869c3d-9223-4470-a51c-5c50d41b15cd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-997.9KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.14MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-1.44MB/s(Youtube:不良林), server: 134.195.198.95, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-524.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-561.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-960.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-582.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1012.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-718.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1006.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇩🇪 德国-843.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-547.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-854.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-349.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-997.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-524.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-561.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-960.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-582.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1012.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-718.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1006.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇩🇪 德国-843.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-547.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-854.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-349.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-997.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-524.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-561.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-960.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-582.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1012.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-718.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1006.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇩🇪 德国-843.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-547.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-854.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-349.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-997.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-524.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-561.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-960.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-582.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1012.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-718.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1006.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇩🇪 德国-843.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-547.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-854.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-349.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-997.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-524.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-561.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-960.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-582.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1012.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-718.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1006.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇩🇪 德国-843.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-547.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-854.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-349.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-997.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-524.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-561.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-960.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-582.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1012.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-718.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1006.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇩🇪 德国-843.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-547.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-854.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-349.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-997.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-524.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-561.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-960.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-582.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1012.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-718.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1006.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇩🇪 德国-843.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-547.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-854.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-349.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-997.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
