--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-486.8KB/s(Youtube:不良林), server: 134.195.198.95, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇦 加拿大-1.06MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇸🇬 新加坡-349.9KB/s(Youtube:不良林), server: 43.134.229.238, port: 20085, type: vmess, uuid: eb35ce5a-7b4d-4fbc-d23f-a57c74872634, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-776.9KB/s(Youtube:不良林), server: 134.195.198.95, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇩🇪 德国-459.0KB/s(Youtube:不良林), server: 193.108.118.30, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇦 加拿大-359.8KB/s(Youtube:不良林), server: 134.195.198.95, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-1.61MB/s(Youtube:不良林), server: 38.143.66.20, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇦 加拿大-462.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇬🇧 英国-2.47MB/s(Youtube:不良林), server: 78.129.253.9, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.24MB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-846.6KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-486.8KB/s(Youtube:不良林), server: 134.195.198.95, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇩🇪 德国-459.0KB/s(Youtube:不良林), server: 193.108.118.30, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-1.41MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-611.2KB/s(Youtube:不良林), server: 134.195.198.95, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-509.4KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇳 中国-453.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇯🇵 日本-1.52MB/s(Youtube:不良林), server: 85.208.108.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-486.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-349.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-776.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-459.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-359.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-462.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-846.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-486.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-459.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-611.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-509.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-486.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-349.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-776.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-459.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-359.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-462.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-846.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-486.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-459.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-611.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-509.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-486.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-349.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-776.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-459.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-359.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-462.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-846.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-486.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-459.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-611.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-509.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-486.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-349.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-776.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-459.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-359.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-462.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-846.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-486.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-459.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-611.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-509.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-486.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-349.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-776.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-459.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-359.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-462.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-846.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-486.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-459.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-611.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-509.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-486.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-349.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-776.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-459.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-359.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-462.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-846.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-486.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-459.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-611.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-509.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-486.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-349.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-776.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-459.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-359.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-462.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-846.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-486.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-459.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-611.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-509.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
